--- a/rtl-tdd-todos/package.json
+++ b/rtl-tdd-todos/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.12",
+    "axios": "^1.6.8",
+    "axios-mock-adapter": "^1.22.0",
     "jest-dom": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
